Fixed AI, it no longer will ever attack itself and it will stay in one place at times. Next steps is getting it to chase after player 1 sometimes. Currently adding curse abilities to the end loop. mostly working, but runnign into some errors. Pushing before I break too much

--- a/client/src/demoMap.css
+++ b/client/src/demoMap.css
@@ -98,7 +98,7 @@ background-color: rgb(31, 32, 32);
 }
 
   .battleMap{
-    background-image: url("./assets/warMaps/Desertmap.jpeg");
+    background-image: url("./assets/warMaps/IceMap.jpeg");
     display: grid;
     size: 100%;
   grid-template-columns: repeat(8, 1fr);
